<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/checadas"
            android:icon="@drawable/ic_nfc"
            android:title="@string/checadas"
            />
        <item
            android:id="@+id/sincronizar"
            android:icon="@drawable/ic_sync"
            android:title="@string/sincronizar_informaci_n"
            />
        <item
            android:id="@+id/configuración"
            android:icon="@drawable/ic_settings"
            android:title="Configuración"
            />
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesi_n"
            />
    </group>
</menu>